--- a/chat/templates/chat/chat_list.html
+++ b/chat/templates/chat/chat_list.html
@@ -1,33 +1,37 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% load activity_filter %}
+{% load chat_tags %}
+{% load account_tags %}
 
 {% block title %}{% trans "Chat-Liste" %}{% endblock %}
 
 {% block content %}
+{% with new_messages=user.get_latest_messages %}
     <h1>{% trans "Chat-Liste" %}</h1>
-    <h2>{% trans "Gruppen" %}</h2>
+    {% if group_rooms %}<h2>{% trans "Gruppen" %}</h2>{% endif %}
     {% for room in group_rooms %}
         <p>
-            <a href="{{ room.get_absolute_url }}">{{ room.target.verbose }}</a>{% if room.id in new_messages %} ({{ new_messages|lookup:room.id }}){% endif %}
+            <a href="{{ room.get_absolute_url }}">{{ room.target.verbose }}</a>{% chat_star new_messages room.id %}
         </p>
     {% endfor %}
-    <h2>{% trans "Freunde" %}</h2>
+    {% if friend_rooms %}<h2>{% trans "Freunde" %}</h2>{% endif %}
     {% for room in friend_rooms %}
         <p>
-            <a href="{{ room.get_absolute_url }}">{{ room.target.verbose }}</a>{% if room.id in new_messages %} ({{ new_messages|lookup:room.id }}){% endif %}
+            <a href="{{ room.get_absolute_url }}">{% call_method room 'title_for' user %}</a>{% chat_star new_messages room.id %}
         </p>
     {% endfor %}
-    <h2>{% trans "Matches" %}</h2>
+    {% if match_rooms %}<h2>{% trans "Matches" %}</h2>{% endif %}
     {% for room in match_rooms %}
         <p>
-            <a href="{{ room.get_absolute_url }}">{{ room.target.verbose }}</a>{% if room.id in new_messages %} ({{ new_messages|lookup:room.id }}){% endif %}
+            <a href="{{ room.get_absolute_url }}">{{ room.target.verbose }}</a>{% chat_star new_messages room.id %}
         </p>
     {% endfor %}
-    <h2>{% trans "Turniere" %}</h2>
+    {% if tournament_rooms %}<h2>{% trans "Turniere" %}</h2>{% endif %}
     {% for room in tournament_rooms %}
         <p>
-            <a href="{{ room.get_absolute_url }}">{{ room.target.verbose }}</a>{% if room.id in new_messages %} ({{ new_messages|lookup:room.id }}){% endif %}
+            <a href="{{ room.get_absolute_url }}">{{ room.target.verbose }}</a>{% chat_star new_messages room.id %}
         </p>
     {% endfor %}
+{% endwith %}
 {% endblock %}
