--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -6,7 +6,7 @@
 {% block content %}
     <h1>{% blocktrans %}Account bearbeiten{% endblocktrans %}</h1>
     <p>{% blocktrans %}Bearbeiten Sie Ihren Account mit folgendem Formular:{% endblocktrans %}</p>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {{ user_form.as_p }}
         {% csrf_token %}
         <input type="submit" value="{% blocktrans %}Fertig{% endblocktrans %}">
