--- a/account/templates/style/queries.css
+++ b/account/templates/style/queries.css
@@ -28,6 +28,7 @@
         overflow-x: hidden;
         min-width: 50vw;
         padding: 5px;
+        margin-right: 0;
     }
 }
 
@@ -50,6 +51,7 @@
 
     .chat-menu {
         display: block;
+        width: 300px;
     }
 
     .envelope {
