--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -53,4 +53,8 @@
 
         full_chat.innerHTML += ('<div class="message"><b>' + name + ', ' + format_time_str(data.time) + ' </b> ' + message + '</div>');
     };
+
+    window.onbeforeunload = function() {
+        user_websocket.send(JSON.stringify({'update_check': '', 'id': {{ room.id }}}));
+    };
 {% endblock %}
