--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     {% if activity.image %}
-        <img src="{{ activity.image.url }}" width="200px" class="image">
+        <img src="{{ activity.image.url }}" width="200px" class="activity-full-image">
     {% endif %}
     <h1>{{ activity.verbose }}</h1>
     {% if activity.category %}
