--- a/account/templates/account/detail.html
+++ b/account/templates/account/detail.html
@@ -14,25 +14,30 @@
         <p><a href="{% url 'chat:chat_room' 'account' 'friendship' friendship.id %}">{% trans "Zum Chat" %}...</a></p>
         <p>{% trans "Voller Name" %}: {{ viewed_user.get_full_name }}</p>
         <p>{{ viewed_user.username }} {% trans "ist Mitglied folgender Aktivitäten" %}:</p>
-        <table>
-            <tr><th>{% trans "Name" %}</th><th>{% trans "Beschreibung" %}</th></tr>
-            {% for activity in viewed_user.activities.all %}
-                <tr>
-                    <td><a href="{{ activity.get_absolute_url }}">{{ activity.name }}</a></td>
-                    <td>{{ activity.description }}</td>
-                </tr>
-            {% endfor %}
-        </table>
-        <p>{% trans "Adresse" %}: {{ viewed_user.location.full_address }}</p>
-    <p>{% trans "Sie sind mit" %} {{ viewed_user.get_full_name }}{% trans "befreundet. Falls Sie das ändern möchten, können Sie die Freundschaft" %} <a href="{% url 'account:destroy_friendship' viewed_user.id %}">{% trans "auch vernichten" %}.</a></p>
-    {% else %}
-        {% blocktrans with user=viewed_user.username%}Sie sind nicht mit {{ user }} befreundet{% endblocktrans %}.
-        {% if requested %}
-            {% trans "Sie haben allerdings bereits eine Freundschaftsanfrage gesendet. Diese wurde entweder abgelehnt oder die Antwort steht noch aus" %}.
-        {% else %}
-            {% trans "Falls Sie das ändern möchten, schicken Sie ihm doch eine" %} <a href="{% url 'account:send_friend_request' viewed_user.id %}">{% trans "Freundschaftsanfrage" %}.</a>
-        {% endif %}
-    {% endif %}
-    <h3>{% trans "Posts" %}</h3>
-    {% include 'wall/post/post_loop.html' %}
+        <div class="activity-horizontal-list">
+        {% for activity in viewed_user.activities.all %}
+            <div class="item">
+                {% load thumbnail %}
+                <a href="{{ activity.get_absolute_url }}"><img src="{% thumbnail activity.image 100x100 %}" class="photo"></a>
+                <div class="title">
+                    {{ activity }}
+                </div>
+            </div>
+        {% endfor %}
+        </div>
+        <div class="profile-rest">
+            <p>{% trans "Adresse" %}: {{ viewed_user.location.full_address }}</p>
+            <p>{% trans "Sie sind mit" %} {{ viewed_user.get_full_name }}{% trans "befreundet. Falls Sie das ändern möchten, können Sie die Freundschaft" %} <a href="{% url 'account:destroy_friendship' viewed_user.id %}">{% trans "auch vernichten" %}.</a></p>
+            {% else %}
+                {% blocktrans with user=viewed_user.username%}Sie sind nicht mit {{ user }} befreundet{% endblocktrans %}.
+                {% if requested %}
+                    {% trans "Sie haben allerdings bereits eine Freundschaftsanfrage gesendet. Diese wurde entweder abgelehnt oder die Antwort steht noch aus" %}.
+                {% else %}
+                    {% trans "Falls Sie das ändern möchten, schicken Sie ihm doch eine" %} <a href="{% url 'account:send_friend_request' viewed_user.id %}">{% trans "Freundschaftsanfrage" %}.</a>
+                {% endif %}
+            {% endif %}
+            <h3>{% trans "Posts" %}</h3>
+            {% include 'wall/post/post_loop.html' %}
+        </div>
+
 {% endblock %}
