--- a/activity/templates/activity/category_detail.html
+++ b/activity/templates/activity/category_detail.html
@@ -11,12 +11,10 @@
     <h2><a href="{% url 'usergroups:group_list' category.id %}">{% trans "Zu den Gruppen" %}...</a></h2>
     <p>{{ category.description|linebreaks }}</p>
     <p>{% trans "Folgende Aktivitäten gehören zu dieser Kategorie" %}:</p>
-    <ul>
-        {% for activity in category.activities.all %}
-            <li><a href="{{ activity.get_absolute_url }}">{{ activity.name }}</a></li>
-        {% endfor %}
-    </ul>
-    <h3>{% trans "Posts in" %} {{ chosen_component }}</h3>
-    {% include 'activity/location_selection.html' %}
-    {% include 'wall/post/post_loop.html' %}
+        {% include "activity/loop.html" with activities=category.activities%}
+    <div class="profile-rest">
+        <h3>{% trans "Posts in" %} {{ chosen_component }}</h3>
+        {% include 'activity/location_selection.html' %}
+        {% include 'wall/post/post_loop.html' %}
+    </div>
 {% endblock %}
