--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -5,15 +5,12 @@
 {% block title %}{% blocktrans %}Home{% endblocktrans %}{% endblock %}
 
 {% block content %}
-	<p>{% blocktrans with v0=user.first_name v1=user.last_name v2=user.username %}Willkommen, {{ v0 }} {{ v1 }} (aka {{ v2 }}).{% endblocktrans %}</p>
+	<p>{% blocktrans with v0=user.username %}Willkommen, {{ v0 }}.{% endblocktrans %}</p>
+    {% if user.photo %}<img src="{{ user.photo.url }}" class="user-photo">{% endif %}
     <p><a href="{% url 'account:user_post_list' %}">{% blocktrans %}Zu Ihren Posts...{% endblocktrans %}</a></p>
     {% if user.activities.all %}
         <p>{% blocktrans %}Sie sind zurzeit Mitglied folgender Aktivitäten:{% endblocktrans %}</p>
-        <ul>
-            {% for activity in user.activities.all %}
-                <li><a href="{{ activity.get_absolute_url }}">{{ activity.name }}</a></li>
-            {% endfor %}
-        </ul>
+        {% include "activity/loop.html" with activities=user.activities %}
     {% else %}
         <p>{% blocktrans %}Sie sind zurzeit kein Mitglied einer Aktivität.{% endblocktrans %}</p>
     {% endif %}
