--- a/wall/templates/wall/post/post_loop.html
+++ b/wall/templates/wall/post/post_loop.html
@@ -1,11 +1,12 @@
 {% load wall_tags %}
 {% load i18n %}
+{% include "account/pagination.html" with page=posts %}
 {% for post in posts %}
     <p><b><i>
-        {{ post.created }}, <a href="{{ post.category.get_absolute_url }}">{{ post.category.verbose }}</a>{% if post.activity %}: <a href="{{ post.activity.get_absolute_url }}">{{ post.activity }}</a>{% endif %}, {% trans "von" %} <a href="{{ post.author.get_absolute_url }}">{{ post.author }}</a>{% if post.group %} (<a href="{{ post.group.get_absolute_url }}">{{ post.group }}</a>){% endif %}
+        {{ post.created|date:"SHORT_DATETIME_FORMAT" }}, <a href="{{ post.category.get_absolute_url }}">{{ post.category.verbose }}</a>{% if post.activity %}: <a href="{{ post.activity.get_absolute_url }}">{{ post.activity }}</a>{% endif %}, {% trans "von" %} <a href="{{ post.author.get_absolute_url }}">{{ post.author }}</a>{% if post.group %} (<a href="{{ post.group.get_absolute_url }}">{{ post.group }}</a>){% endif %}
         {% if post.author == user %}
             <a href="{% url 'wall:delete_post' post.id request.path %}">{% blocktrans %}[Löschen]{% endblocktrans %}</a>
-        {% endif %}</b></i>: {{ post.message|markdown }}
+        {% endif %}</b></i>{{ post.message|markdown }}
         {% if post.audio %}
             <audio controls>
                 <source src="{{ post.audio.url }}" type="{{ post.media_mime_type }}">
