--- a/activity/templates/activity/activity_list.html
+++ b/activity/templates/activity/activity_list.html
@@ -17,7 +17,7 @@
                 {{ activity }}
             </div>
             <div class="text">
-                {{ count }} {% trans "Mitglieder" %}
+                {% trans "Mitglieder" %}: {{ count }}
             </div>
         </div>
     {% endfor %}
